Update bg image styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
-@import url("fontawesome-all.min.css");
-
-/*
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html,
 body,
 div,
@@ -128,7 +120,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
+    content: "";
     content: none;
 }
 
@@ -196,7 +188,7 @@ input,
 select,
 textarea {
     color: #fff;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 15pt;
     font-weight: 300 !important;
     letter-spacing: -0.025em;
@@ -235,7 +227,7 @@ a:hover {
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important;
-    font-family: 'Font Awesome 5 Free';
+    font-family: "Font Awesome 5 Free";
     font-weight: 400;
 }
 
@@ -248,7 +240,7 @@ a:hover {
 }
 
 .icon.brands:before {
-    font-family: 'Font Awesome 5 Brands';
+    font-family: "Font Awesome 5 Brands";
 }
 
 
@@ -320,7 +312,7 @@ a:hover {
     -ms-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     /* Set your background with this */
-    background: #348cb2 url("images/ombUn7ergE4.jpg") bottom left;
+    background: #000000 url("images/ombUn7ergE4.jpg") bottom left;
     background-repeat: repeat-x;
     height: 100%;
     left: 0;
@@ -464,7 +456,7 @@ a:hover {
 }
 
 #main:before {
-    content: '';
+    content: "";
     display: inline-block;
     height: 100%;
     margin-right: 0;
@@ -635,10 +627,18 @@ a:hover {
 }
 
 #header h1 {
-    font-size: 4.35em;
+    font-size: 5em;
     font-weight: 900;
     letter-spacing: -0.035em;
     line-height: 1em;
+}
+
+#header h3 {
+    font-size: 1.75em;
+    font-weight: 600;
+    line-height: 1em;
+    margin: 0.5em 0 0.5em 0;
+    opacity: 0.75;
 }
 
 #header p {
@@ -794,10 +794,10 @@ a:hover {
 /* Footer */
 
 #footer {
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
-    background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
-    background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
+    background-image: -moz-linear-gradient( top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
+    background-image: -webkit-linear-gradient( top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
+    background-image: -ms-linear-gradient( top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
+    background-image: linear-gradient( top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 75%);
     bottom: 0;
     cursor: default;
     height: 6em;
@@ -951,7 +951,7 @@ a:hover {
         }
     }
     #bg {
-        background-size: 750px auto;
+        background-size: 100% auto;
         width: 2250px;
     }
 }
@@ -1111,7 +1111,7 @@ a:hover {
         }
     }
     #bg {
-        background-size: 412.5px auto;
+        background-size: 100% auto;
         width: 1237.5px;
     }
     /* Header */
